# text-short-shim

./: ChangeLog.md  README.md  text-short.cabal
src/Data/Text/: Short.hs
src/Data/Text/Short/: Unsafe.hs
